--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h1>Hello Spring Boot</h1>
-<a href="/oauth2/authorization/kakao" class="btn btn-secondary active" role="button">Kakao Login</a>
+<form action="/login" method="get">
+    <button type="submit">login</button>
+</form>
 </body>
 </html>
